# rinhadebackend2025

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  nginx.conf  pyproject.toml
app/: client.py  db.py  gunicorn.conf.py  main.py  models.py  services.py  stream.py  worker.py
