[project]
name = "rinhadebackend2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Everton Castro",email = "contato@evertoncastro.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn[standard]==0.32.0",
    "gunicorn==23.0.0",
    "pydantic==2.9.2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rinhadebackend2025"
version = "0.1.0"
description = ""
authors = ["Everton Castro <contato@evertoncastro.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.116.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
